crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__audit_test-graph.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Mutation.add\" ]\n    2 [ label = \"Mutation.multiply\" ]\n    3 [ label = \"Mutation.add\" ]\n    4 [ label = \"Mutation.delete\" ]\n    5 [ label = \"Root#c\", shape=parallelogram, color=dodgerblue ]\n    6 [ label = \"add#c\", shape=box, color=dodgerblue ]\n    7 [ label = \"Root#a\", shape=parallelogram, color=dodgerblue ]\n    8 [ label = \"multiply#a\", shape=box, color=dodgerblue ]\n    9 [ label = \"add#c\", shape=box, color=dodgerblue ]\n    10 [ label = \"Root#b\", shape=parallelogram, color=dodgerblue ]\n    11 [ label = \"delete#b\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 5 [ label = \"\", style=dashed,arrowhead=none ]\n    5 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    6 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 7 [ label = \"\", style=dashed,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    5 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 10 [ label = \"\", style=dashed,arrowhead=none ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Mutation.add]
    2 [ Mutation.multiply]
    3 [ Mutation.add]
    4 [ Mutation.delete]
    5 [ Root#c]
    6 [ add#c]
    7 [ Root#a]
    8 [ multiply#a]
    9 [ add#c]
    10 [ Root#b]
    11 [ delete#b]
    0 -> 1 [ label = "Field" ]
    0 -> 2 [ label = "Field" ]
    0 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "CreateChildResolver" ]
    0 -> 5 [ label = "HasChildResolver" ]
    5 -> 6 [ label = "CanProvide" ]
    6 -> 1 [ label = "Provides" ]
    0 -> 7 [ label = "CreateChildResolver" ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 2 [ label = "Provides" ]
    5 -> 9 [ label = "CanProvide" ]
    9 -> 3 [ label = "Provides" ]
    0 -> 10 [ label = "CreateChildResolver" ]
    0 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 4 [ label = "Provides" ]
}
