crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__consecutive_subgraphs-graph.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Mutation.createUser\" ]\n    2 [ label = \"Mutation.createProduct\" ]\n    3 [ label = \"Mutation.createReview\" ]\n    4 [ label = \"Review.id\" ]\n    5 [ label = \"Product.upc\" ]\n    6 [ label = \"User.id\" ]\n    7 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    8 [ label = \"createUser#accounts\", shape=box, color=dodgerblue ]\n    9 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    10 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    11 [ label = \"createProduct#products\", shape=box, color=dodgerblue ]\n    12 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    13 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue ]\n    14 [ label = \"createReview#reviews\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 3 [ label = \"\" ]\n    3 -> 4 [ label = \"\" ]\n    2 -> 5 [ label = \"\" ]\n    1 -> 6 [ label = \"\" ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 7 [ label = \"\", style=dashed,arrowhead=none ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    8 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 6 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 10 [ label = \"\", style=dashed,arrowhead=none ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 13 [ label = \"\", style=dashed,arrowhead=none ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Mutation.createUser]
    2 [ Mutation.createProduct]
    3 [ Mutation.createReview]
    4 [ Review.id]
    5 [ Product.upc]
    6 [ User.id]
    7 [ Root#accounts]
    8 [ createUser#accounts]
    9 [ id#accounts]
    10 [ Root#products]
    11 [ createProduct#products]
    12 [ upc#products]
    13 [ Root#reviews]
    14 [ createReview#reviews]
    15 [ id#reviews]
    0 -> 1 [ label = "Field" ]
    0 -> 2 [ label = "Field" ]
    0 -> 3 [ label = "Field" ]
    3 -> 4 [ label = "Field" ]
    2 -> 5 [ label = "Field" ]
    1 -> 6 [ label = "Field" ]
    0 -> 7 [ label = "CreateChildResolver" ]
    0 -> 7 [ label = "HasChildResolver" ]
    7 -> 8 [ label = "CanProvide" ]
    8 -> 1 [ label = "Provides" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 6 [ label = "Provides" ]
    0 -> 10 [ label = "CreateChildResolver" ]
    0 -> 10 [ label = "HasChildResolver" ]
    10 -> 11 [ label = "CanProvide" ]
    11 -> 2 [ label = "Provides" ]
    11 -> 12 [ label = "CanProvide" ]
    12 -> 5 [ label = "Provides" ]
    0 -> 13 [ label = "CreateChildResolver" ]
    0 -> 13 [ label = "HasChildResolver" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 3 [ label = "Provides" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 4 [ label = "Provides" ]
}
