crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__consecutive_subgraphs-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#accounts\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Mutation.createUser\" ]\n    3 [ label = \"User.id\" ]\n    4 [ label = \"Root#products\", color=royalblue,shape=parallelogram ]\n    5 [ label = \"Mutation.createProduct\" ]\n    6 [ label = \"Product.upc\" ]\n    7 [ label = \"Root#reviews\", color=royalblue,shape=parallelogram ]\n    8 [ label = \"Mutation.createReview\" ]\n    9 [ label = \"Review.id\" ]\n    0 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    4 -> 5 [ label = \"\" ]\n    5 -> 6 [ label = \"\" ]\n    0 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    7 -> 8 [ label = \"\" ]\n    8 -> 9 [ label = \"\" ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#accounts" ]
    2 [ label = "Mutation.createUser" ]
    3 [ label = "User.id" ]
    4 [ label = "Root#products" ]
    5 [ label = "Mutation.createProduct" ]
    6 [ label = "Product.upc" ]
    7 [ label = "Root#reviews" ]
    8 [ label = "Mutation.createReview" ]
    9 [ label = "Review.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "QueryPartition" ]
    4 -> 5 [ label = "Field" ]
    5 -> 6 [ label = "Field" ]
    0 -> 7 [ label = "QueryPartition" ]
    7 -> 8 [ label = "Field" ]
    8 -> 9 [ label = "Field" ]
}
