crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__consecutive_subgraphs_with_multiple_fields-graph.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Mutation.createUser\" ]\n    2 [ label = \"Mutation.updateUser\" ]\n    3 [ label = \"Mutation.createProduct\" ]\n    4 [ label = \"Mutation.updateProduct\" ]\n    5 [ label = \"Mutation.createReview\" ]\n    6 [ label = \"Mutation.updateReview\" ]\n    7 [ label = \"Review.id\" ]\n    8 [ label = \"Review.id\" ]\n    9 [ label = \"Product.upc\" ]\n    10 [ label = \"Product.upc\" ]\n    11 [ label = \"User.id\" ]\n    12 [ label = \"User.id\" ]\n    13 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue ]\n    14 [ label = \"createUser#accounts\", shape=box, color=dodgerblue ]\n    15 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    16 [ label = \"updateUser#accounts\", shape=box, color=dodgerblue ]\n    17 [ label = \"id#accounts\", shape=box, color=dodgerblue ]\n    18 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue ]\n    19 [ label = \"createProduct#products\", shape=box, color=dodgerblue ]\n    20 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    21 [ label = \"updateProduct#products\", shape=box, color=dodgerblue ]\n    22 [ label = \"upc#products\", shape=box, color=dodgerblue ]\n    23 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue ]\n    24 [ label = \"createReview#reviews\", shape=box, color=dodgerblue ]\n    25 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    26 [ label = \"updateReview#reviews\", shape=box, color=dodgerblue ]\n    27 [ label = \"id#reviews\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    0 -> 2 [ label = \"\" ]\n    0 -> 3 [ label = \"\" ]\n    0 -> 4 [ label = \"\" ]\n    0 -> 5 [ label = \"\" ]\n    0 -> 6 [ label = \"\" ]\n    6 -> 7 [ label = \"\" ]\n    5 -> 8 [ label = \"\" ]\n    4 -> 9 [ label = \"\" ]\n    3 -> 10 [ label = \"\" ]\n    2 -> 11 [ label = \"\" ]\n    1 -> 12 [ label = \"\" ]\n    0 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 13 [ label = \"\", style=dashed,arrowhead=none ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    14 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 12 [ label = \"\", color=violet,arrowhead=none ]\n    13 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    16 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    16 -> 17 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    17 -> 11 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 18 [ label = \"\", style=dashed,arrowhead=none ]\n    18 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    19 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    19 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    20 -> 10 [ label = \"\", color=violet,arrowhead=none ]\n    18 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    21 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n    21 -> 22 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    22 -> 9 [ label = \"\", color=violet,arrowhead=none ]\n    0 -> 23 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 23 [ label = \"\", style=dashed,arrowhead=none ]\n    23 -> 24 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    24 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    24 -> 25 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    25 -> 8 [ label = \"\", color=violet,arrowhead=none ]\n    23 -> 26 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    26 -> 6 [ label = \"\", color=violet,arrowhead=none ]\n    26 -> 27 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    27 -> 7 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Mutation.createUser]
    2 [ Mutation.updateUser]
    3 [ Mutation.createProduct]
    4 [ Mutation.updateProduct]
    5 [ Mutation.createReview]
    6 [ Mutation.updateReview]
    7 [ Review.id]
    8 [ Review.id]
    9 [ Product.upc]
    10 [ Product.upc]
    11 [ User.id]
    12 [ User.id]
    13 [ Root#accounts]
    14 [ createUser#accounts]
    15 [ id#accounts]
    16 [ updateUser#accounts]
    17 [ id#accounts]
    18 [ Root#products]
    19 [ createProduct#products]
    20 [ upc#products]
    21 [ updateProduct#products]
    22 [ upc#products]
    23 [ Root#reviews]
    24 [ createReview#reviews]
    25 [ id#reviews]
    26 [ updateReview#reviews]
    27 [ id#reviews]
    0 -> 1 [ label = "Field" ]
    0 -> 2 [ label = "Field" ]
    0 -> 3 [ label = "Field" ]
    0 -> 4 [ label = "Field" ]
    0 -> 5 [ label = "Field" ]
    0 -> 6 [ label = "Field" ]
    6 -> 7 [ label = "Field" ]
    5 -> 8 [ label = "Field" ]
    4 -> 9 [ label = "Field" ]
    3 -> 10 [ label = "Field" ]
    2 -> 11 [ label = "Field" ]
    1 -> 12 [ label = "Field" ]
    0 -> 13 [ label = "CreateChildResolver" ]
    0 -> 13 [ label = "HasChildResolver" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 1 [ label = "Provides" ]
    14 -> 15 [ label = "CanProvide" ]
    15 -> 12 [ label = "Provides" ]
    13 -> 16 [ label = "CanProvide" ]
    16 -> 2 [ label = "Provides" ]
    16 -> 17 [ label = "CanProvide" ]
    17 -> 11 [ label = "Provides" ]
    0 -> 18 [ label = "CreateChildResolver" ]
    0 -> 18 [ label = "HasChildResolver" ]
    18 -> 19 [ label = "CanProvide" ]
    19 -> 3 [ label = "Provides" ]
    19 -> 20 [ label = "CanProvide" ]
    20 -> 10 [ label = "Provides" ]
    18 -> 21 [ label = "CanProvide" ]
    21 -> 4 [ label = "Provides" ]
    21 -> 22 [ label = "CanProvide" ]
    22 -> 9 [ label = "Provides" ]
    0 -> 23 [ label = "CreateChildResolver" ]
    0 -> 23 [ label = "HasChildResolver" ]
    23 -> 24 [ label = "CanProvide" ]
    24 -> 5 [ label = "Provides" ]
    24 -> 25 [ label = "CanProvide" ]
    25 -> 8 [ label = "Provides" ]
    23 -> 26 [ label = "CanProvide" ]
    26 -> 6 [ label = "Provides" ]
    26 -> 27 [ label = "CanProvide" ]
    27 -> 7 [ label = "Provides" ]
}
