crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__mutation__consecutive_subgraphs_with_multiple_fields-solver.snap
---
source: crates/engine/query-solver/src/tests/mutation.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"Review.id\", style=dashed ]\n    2 [ label = \"Review.id\", style=dashed ]\n    3 [ label = \"Product.upc\", style=dashed ]\n    4 [ label = \"Product.upc\", style=dashed ]\n    5 [ label = \"User.id\", style=dashed ]\n    6 [ label = \"User.id\", style=dashed ]\n    7 [ label = \"Root#accounts\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    8 [ label = \"createUser#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"id#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"updateUser#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"id#accounts\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"Root#products\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    13 [ label = \"createProduct#products\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label = \"upc#products\", shape=box, color=dodgerblue, style=dashed ]\n    15 [ label = \"updateProduct#products\", shape=box, color=dodgerblue, style=dashed ]\n    16 [ label = \"upc#products\", shape=box, color=dodgerblue, style=dashed ]\n    17 [ label = \"Root#reviews\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    18 [ label = \"createReview#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    19 [ label = \"id#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    20 [ label = \"updateReview#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    21 [ label = \"id#reviews\", shape=box, color=dodgerblue, style=dashed ]\n    22 [ label=\"\", style=dashed]\n    0 -> 7 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 6 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 12 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    15 -> 16 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    16 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    0 -> 17 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 18 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    18 -> 19 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    19 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    17 -> 20 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    20 -> 21 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    21 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    22 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "Review.id", steiner=0 ]
    2 [ label = "Review.id", steiner=0 ]
    3 [ label = "Product.upc", steiner=0 ]
    4 [ label = "Product.upc", steiner=0 ]
    5 [ label = "User.id", steiner=0 ]
    6 [ label = "User.id", steiner=0 ]
    7 [ label = "Root#accounts", steiner=0 ]
    8 [ label = "createUser#accounts", steiner=0 ]
    9 [ label = "id#accounts", steiner=0 ]
    10 [ label = "updateUser#accounts", steiner=0 ]
    11 [ label = "id#accounts", steiner=0 ]
    12 [ label = "Root#products", steiner=0 ]
    13 [ label = "createProduct#products", steiner=0 ]
    14 [ label = "upc#products", steiner=0 ]
    15 [ label = "updateProduct#products", steiner=0 ]
    16 [ label = "upc#products", steiner=0 ]
    17 [ label = "Root#reviews", steiner=0 ]
    18 [ label = "createReview#reviews", steiner=0 ]
    19 [ label = "id#reviews", steiner=0 ]
    20 [ label = "updateReview#reviews", steiner=0 ]
    21 [ label = "id#reviews", steiner=0 ]
    22 [ label="", style=dashed]
    0 -> 7 [ cost=1, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 9 [ cost=0, steiner=0]
    9 -> 6 [ cost=0, steiner=0]
    7 -> 10 [ cost=0, steiner=0]
    10 -> 11 [ cost=0, steiner=0]
    11 -> 5 [ cost=0, steiner=0]
    0 -> 12 [ cost=1, steiner=0]
    12 -> 13 [ cost=0, steiner=0]
    13 -> 14 [ cost=0, steiner=0]
    14 -> 4 [ cost=0, steiner=0]
    12 -> 15 [ cost=0, steiner=0]
    15 -> 16 [ cost=0, steiner=0]
    16 -> 3 [ cost=0, steiner=0]
    0 -> 17 [ cost=1, steiner=0]
    17 -> 18 [ cost=0, steiner=0]
    18 -> 19 [ cost=0, steiner=0]
    19 -> 2 [ cost=0, steiner=0]
    17 -> 20 [ cost=0, steiner=0]
    20 -> 21 [ cost=0, steiner=0]
    21 -> 1 [ cost=0, steiner=0]
    22 -> 0 [ cost=0, steiner=0]
}
